--- a/helloworld/hagakuredjango/hagakureapp/templates/index.html
+++ b/helloworld/hagakuredjango/hagakureapp/templates/index.html
@@ -25,6 +25,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="{% static 'js/scroll_on.js' %}"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css" rel="stylesheet">
+  <script src="{% static 'js/rain.js' %}"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js"
             type="text/javascript"></script>
@@ -179,6 +180,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
     </main>
   </section>
+<!--  /* 雪を降らせるコンテナ-*/-->
+  <div class="snow-container">
   <!-- about_us ここから-->
   <section class="wrapper_hp">
     <div class="all_aboutus">
@@ -245,6 +248,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
   </section>
   <!--hagakure ここまで-->
+ <!--  /* 雪を降らせるコンテナ-*/-->
+  </div>
   <!--dojoとmakimonoのグループ ここから-->
   <div class="dojo_makimono_group wrapper_hp">
     <!-- dojo ここから-->
