--- a/helloworld/hagakuredjango/hagakureapp/templates/index.html
+++ b/helloworld/hagakuredjango/hagakureapp/templates/index.html
@@ -237,7 +237,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div class="hagakure-summary_hagakureexp scroll_up">
             <h1>hagakure</h1>
             <p>
-              test)今を生きるわたしたちにとっても「生きていくためのヒント」が詰まっており、佐賀で勉強する我々にも通じる部分があると考えコミュニティ名にしました。
+              test)test2)佐賀で勉強する我々にも通じる部分があると考えコミュニティ名にしました。
             </p>
           </div>
         </div>
