--- a/helloworld/hagakuredjango/hagakureapp/templates/index.html
+++ b/helloworld/hagakuredjango/hagakureapp/templates/index.html
@@ -237,7 +237,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div class="hagakure-summary_hagakureexp scroll_up">
             <h1>hagakure</h1>
             <p>
-              test)test2)佐賀で勉強する我々にも通じる部分があると考えコミュニティ名にしました。
+              江戸時代に佐賀藩の藩士によって書かれた書物で、武士の精神や日頃の行いのあり方について説いています。今を生きるわたしたちにとっても「生きていくためのヒント」が詰まっており、佐賀で勉強する我々にも通じる部分があると考えコミュニティ名にしました。
             </p>
           </div>
         </div>
