--- a/helloworld/hagakuredjango/hagakureapp/templates/index.html
+++ b/helloworld/hagakuredjango/hagakureapp/templates/index.html
@@ -222,6 +222,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
   </section>
   <!--about_us ここまで-->
+  <!-- osusume ここから-->
+  <section class="wrapper_hp">
+    <div class="osusume">
+      <div class="osusume_left">
+        <h2>要素1</h2>
+        <p>ここに要素1のコンテンツが入ります。</p>
+      </div>
+      <div class="osusume_right">
+        <h2>要素2</h2>
+        <p>ここに要素2のコンテンツが入ります。</p>
+      </div>
+    </div>
+  </section>
   <!--hagakure ここから-->
   <!-- <div id="particles-js"></div> -->
   <section class="hagakure-explain_hagakureexp wrapper_hp">
