--- a/helloworld/hagakuredjango/hagakureapp/templates/index.html
+++ b/helloworld/hagakuredjango/hagakureapp/templates/index.html
@@ -226,12 +226,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <section class="wrapper_hp">
     <div class="osusume">
       <div class="osusume_left">
-        <h2>要素1</h2>
-        <p>ここに要素1のコンテンツが入ります。</p>
+        <div class="osusume_text">
+        <h1 class="marker">こんな方におすすめ</h1>
+        <p>佐賀県内のプログラミング好きと仲良くなりたい。<br>
+          独学でプログラミングを勉強しているけど、アウトプットの機会がない。<br>
+          ITで、なんかワクワク♪したい人。<br>
+          仕事でITを活用している。同じような仲間と知識を共有したい。<br>
+          プログラミングをこれから勉強していきたい。<br>
+          SSSなどで学んだプログラミング知識を風化させないため、情報に触れていたい。</p>
+        </div>
       </div>
       <div class="osusume_right">
-        <h2>要素2</h2>
-        <p>ここに要素2のコンテンツが入ります。</p>
+         <img class="osusume_event_photo" src="{% static 'images/event.jpg' %}" alt="オフラインイベントの様子">
       </div>
     </div>
   </section>
