--- a/helloworld/hagakuredjango/hagakureapp/templates/index.html
+++ b/helloworld/hagakuredjango/hagakureapp/templates/index.html
@@ -243,6 +243,54 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
     </div>
   </section>
+  <!--受講者の声 ここから-->
+  <section class="some_voices_container wrapper_hp">
+    <div class="some_voices scroll_up">
+      <h1>受講者の声</h1>
+      <div class="some_voices_main">
+        <div class="some_voices_col">
+            <div class="voice_index_frame">
+                <div class="person_index">
+                  <div class="persons">
+                    <img src="{% static 'images/voice/voice-samurai.png' %}" alt="voice-samurai.png" class="persons">
+                  </div>
+                </div>
+                <p>投稿すると、皆様から温かいレスポンスがあり、やる気につながります。<br>
+                継続した学習のモチベーションが保てます。</p>
+            </div>
+            <div class="voice_index_frame">
+                <div class="person_index">
+                  <div class="ninja">
+                    <img src="{% static 'images/voice/voice-ninja2.png' %}" alt="voice-ninja2.png">
+                  </div>
+                </div>
+                <p>知的な刺激を貰えます。それでいて、ゆるい雰囲気で自由。日常生活では出会えない多種多様な人々と、プログラミングを通して知り合えました。</p>
+            </div>
+        </div>
+        <div class="some_voices_col">
+            <div class="voice_index_frame">
+                <div class="person_index">
+                  <div class="ninja">
+                    <img src="{% static 'images/voice/voice-ninja1.png' %}" alt="voice-ninja1.png">
+                  </div>
+                </div>
+                <p>自分一人では収集できない幅広い情報を目にすることができる。<br>
+                おすすめスポット紹介のチャンネルも楽しいです。</p>
+            </div>
+            <div class="voice_index_frame">
+                <div class="person_index">
+                   <div class="persons">
+                     <img src="{% static 'images/voice/machi-musume.png' %}" alt="machi-musume.png">
+                   </div>
+                </div>
+                <p>いろいろな情報が得られます。<br>
+                特定の分野やテーマについて興味のある人が集まって一緒に学ぶ分科会、または研究会のようなものが出来ればと思います。</p>
+            </div>
+        </div>
+      </div>
+      <a href="voice">もっと体験談を読む 〉</a>
+    </div>
+  </section>
   <!--hagakure ここから-->
   <!-- <div id="particles-js"></div> -->
   <section class="hagakure-explain_hagakureexp wrapper_hp">
