--- a/helloworld/hagakuredjango/hagakureapp/templates/index.html
+++ b/helloworld/hagakuredjango/hagakureapp/templates/index.html
@@ -186,7 +186,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <section class="wrapper_hp">
     <div class="all_aboutus">
       <div class="container_aboutus scroll_up">
-        <div class="top_images_aboutus">
+        <div class="content_aboutus">
+          <h1 class="sub_title_aboutus marker">About us</h1>
+          <div class="description_aboutus">
+            <h2>アウトプットすることで、「自分の学び」を「みんなの学び」へ。</h2>
+            <p>
+              勉強する楽しさを、仲間と共有することで継続のモチベーションに変えていける。<br>コミュニティにはそんな力があると考えています。
+            </p>
+            <p>みんな塾生、みんな先生。私たちは、学び合いを楽しむことを目的にしています。<br>プログラミングを学びたい同志とともに、楽しく成長しませんか。</p>
+            <p>興味のある方、お気軽に<a href="https://docs.google.com/forms/d/e/1FAIpQLSc9WH1hvDtyB_pghy8NNrrLCVeGONm7o8ET2PF70KPZTel_jQ/alreadyresponded">参加フォーム</a>よりお問い合わせください。</p>
+          </div>
+        </div>
+        <div class="bottom_images_aboutus">
           <div class="left_side_aboutus">
             <div class="castle_aboutus">
               <img src="{% static 'images/aboutus_castle.png' %}" alt="お城">
@@ -202,20 +213,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="bamboo_aboutus">
               <img src="{% static 'images/aboutus_bamboo.png' %}" alt="竹">
             </div>
-          </div>
-        </div>
-        <div class="content_aboutus">
-          <div class="top_icon_aboutus">
-            <img src="{% static 'images/aboutus_topicon.png' %}" alt="お侍さん">
-          </div>
-          <h1 class="sub_title_aboutus">about us</h1>
-          <div class="description_aboutus">
-            <p>佐賀県内でプログラミングを学ぶ人、活用したい人達によるコミュニティ、 HAGAKURE PROGRAMMING塾です。</p>
-            <p>
-              プログラミングを学ぶもの同士のアウトプットが勉強する上での最高の励みになる。勉強していくなかで、Qiitaやstackoverflowなどの、「知見を共有しあう文化」に感激し、そういう輪を作っていきたい。「佐賀にIT人材を増やしたい」という理念を広げていきたい。県内のプログラミング好きと仲良くなりたい。
-            </p>
-            <p>このような理念のもと、プログラミングを学ぶ人、活用したい人達がつながりを持っていける場所として発足したコミュニティです。SlackとGithubを拠点として勉強会や情報共有等の活動を行っています。</p>
-            <p>興味のある方、お気軽に<a href="https://docs.google.com/forms/d/e/1FAIpQLSc9WH1hvDtyB_pghy8NNrrLCVeGONm7o8ET2PF70KPZTel_jQ/alreadyresponded">参加フォーム</a>よりお問い合わせください。</p>
           </div>
         </div>
       </div>
