--- a/helloworld/hagakuredjango/static/css/style.css
+++ b/helloworld/hagakuredjango/static/css/style.css
@@ -883,7 +883,7 @@ html { font-size:80%}
 .some_voices h1{
     color: #625651;
     font-weight: normal;
-    font-size: 2.4em;
+    font-size: 38px;
     letter-spacing: 0.2em;
 }
 
@@ -899,11 +899,13 @@ html { font-size:80%}
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom:20px;
+    max-width:1000px;
+    margin:auto;
+    padding:40px 0px 30px 20px;
 }
 
 .some_voices_col{
-    width:500px;
+    width:50%;
 }
 
 .voice_index_frame {
@@ -911,10 +913,10 @@ html { font-size:80%}
     position: relative;
     border-radius:1rem;
     background-color: #fff;
-    padding:2rem;
-    margin:5rem 2em 2em 5em;
-    width: 375px;
-    height:180px;
+    padding:15px 5px 10px 15px;
+    margin:30px 20px 20px 30px;
+    width: 80%;
+    max-height:207px;
     font-size: 1.2rem;
     text-align:left;
     justify-content: center;
@@ -922,19 +924,33 @@ html { font-size:80%}
 
 .voice_index_frame p{
     margin:1em;
+    line-height:1.7;
 }
 
 @media screen and (max-width:768px) {
+    .some_voices h1{
+    font-size: 30px;
+    }
+
     .some_voices_main {
-    flex-direction: column;
-    height:100%;
+    display: block;
+    align-items: center;
+    justify-content: center;
+    max-width:90%;
+    margin:auto;
+    padding:20px 0px 30px 0px;
+    }
+
+    .some_voices_col{
+    width:100%;
     }
 
     .voice_index_frame {
-        padding:2rem 2rem 1rem;
-        margin:5rem 2em 2em 5em;
-        width: 300px;
+        padding:20px 5px 10px 10px;
+        margin:50px 0px 10px 10px;
+        width: 200px;
         height: auto;
+        max-height: 270px;
     }
 }
 
