--- a/helloworld/hagakuredjango/hagakureapp/templates/index.html
+++ b/helloworld/hagakuredjango/hagakureapp/templates/index.html
@@ -180,7 +180,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
     </main>
   </section>
-
+<!--  /* 雪を降らせるコンテナ-*/-->
+  <div class="snow-container">
   <!-- about_us ここから-->
   <section class="wrapper_hp">
     <div class="all_aboutus">
@@ -310,7 +311,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
   </section>
   <!--hagakure ここまで-->
-
+ <!--  /* 雪を降らせるコンテナ-*/-->
+  </div>
   <!--dojoとmakimonoのグループ ここから-->
   <div class="dojo_makimono_group wrapper_hp">
     <!-- dojo ここから-->
