--- a/helloworld/hagakuredjango/hagakureapp/templates/index.html
+++ b/helloworld/hagakuredjango/hagakureapp/templates/index.html
@@ -244,6 +244,51 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
   </section>
   <!-- osusume ここまで-->
+  <!--受講者の声 ここから-->
+  <section class="some_voices_container wrapper_hp">
+    <div class="some_voices scroll_up">
+      <h1 class="marker">受講者の声</h1>
+      <div class="some_voices_main">
+        <div class="some_voices_col">
+            <div class="voice_index_frame">
+                <div class="person_index">
+                  <div class="persons">
+                    <img src="{% static 'images/voice/voice-samurai.png' %}" alt="voice-samurai.png" class="persons">
+                  </div>
+                </div>
+                <p>いろいろな情報が得られます。<br>特定の分野やテーマについて興味のある人が集まって一緒に学ぶ分科会、または研究会のようなものが出来ればと思います。</p>
+            </div>
+            <div class="voice_index_frame">
+                <div class="person_index">
+                  <div class="ninja">
+                    <img src="{% static 'images/voice/voice-ninja2.png' %}" alt="voice-ninja2.png">
+                  </div>
+                </div>
+                <p>知的な刺激を貰えます。<br>それでいて、ゆるい雰囲気で自由。日常生活では出会えない多種多様な人々と、プログラミングを通して知り合えました。</p>
+            </div>
+        </div>
+        <div class="some_voices_col">
+            <div class="voice_index_frame">
+                <div class="person_index">
+                  <div class="ninja">
+                    <img src="{% static 'images/voice/voice-ninja1.png' %}" alt="voice-ninja1.png">
+                  </div>
+                </div>
+                <p>同じ業界でITやAIを活用したい方との繋がりができ、仕事のモチベーションの維持になります。一人では勉強を継続することはなかなか難しいですが、仲間がいると頑張れます。</p>
+            </div>
+            <div class="voice_index_frame">
+                <div class="person_index">
+                   <div class="persons">
+                     <img src="{% static 'images/voice/machi-musume.png' %}" alt="machi-musume.png">
+                   </div>
+                </div>
+                <p>実際にPythonを動かしている画面を共有して見せてもらった時は感動しました。また、いろいろな職種の方が参加されていて、意識が高いので触発されています。</p>
+            </div>
+        </div>
+      </div>
+      <a href="voice">もっと体験談を読む 〉</a>
+    </div>
+  </section>
   <!--hagakure ここから-->
   <!-- <div id="particles-js"></div> -->
   <section class="hagakure-explain_hagakureexp wrapper_hp">
