--- a/helloworld/hagakuredjango/hagakureapp/templates/index.html
+++ b/helloworld/hagakuredjango/hagakureapp/templates/index.html
@@ -193,8 +193,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <p>
               勉強する楽しさを、仲間と共有することで継続のモチベーションに変えていける。<br>コミュニティにはそんな力があると考えています。
             </p>
-            <p>みんな塾生、みんな先生。私たちは、学び合いを楽しむことを目的にしています。<br>プログラミングを学びたい同志とともに、楽しく成長しませんか。</p>
-            <p>興味のある方、お気軽に<a href="https://docs.google.com/forms/d/e/1FAIpQLSc9WH1hvDtyB_pghy8NNrrLCVeGONm7o8ET2PF70KPZTel_jQ/alreadyresponded">参加フォーム</a>よりお問い合わせください。</p>
+            <p>みんな塾生、みんな先生。<br>私たちは、世代、職業を超えて学び合いを楽しむことを目的にしています。<br>プログラミングを学びたい同志とともに、楽しく成長しませんか。</p>
+            <p>興味のある方、お気軽に<a href="https://ocomoji.co.jp/">参加フォーム</a>よりお問い合わせください。</p>
           </div>
         </div>
         <div class="bottom_images_aboutus">
@@ -285,7 +285,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
         </div>
       </div>
-      <a href="voice">もっと体験談を読む 〉</a>
+      <a href="voice.html">もっと体験談を読む 〉</a>
     </div>
   </section>
   <!--hagakure ここから-->
