--- a/helloworld/hagakuredjango/hagakureapp/templates/index.html
+++ b/helloworld/hagakuredjango/hagakureapp/templates/index.html
@@ -25,7 +25,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="{% static 'js/scroll_on.js' %}"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css" rel="stylesheet">
-  <script src="{% static 'js/rain.js' %}"></script>
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js"
             type="text/javascript"></script>
@@ -181,7 +181,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </main>
   </section>
 <!--  /* 雪を降らせるコンテナ-*/-->
-  <div class="snow-container">
+<!--  <div class="snow-container">-->
   <!-- about_us ここから-->
   <section class="wrapper_hp">
     <div class="all_aboutus">
@@ -194,7 +194,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               勉強する楽しさを、仲間と共有することで継続のモチベーションに変えていける。<br>コミュニティにはそんな力があると考えています。
             </p>
             <p>みんな塾生、みんな先生。<br>私たちは、世代、職業を超えて学び合いを楽しむことを目的にしています。<br>プログラミングを学びたい同志とともに、楽しく成長しませんか。</p>
-            <p>興味のある方、お気軽に<a href="https://ocomoji.co.jp/">参加フォーム</a>よりお問い合わせください。</p>
+            <p>興味のある方、お気軽に<a href="https://forms.gle/N8ipEt2RFSs8bt4a9">参加フォーム</a>よりお問い合わせください。</p>
           </div>
         </div>
         <div class="bottom_images_aboutus">
@@ -243,7 +243,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!--受講者の声 ここから-->
   <section class="some_voices_container wrapper_hp">
     <div class="some_voices scroll_up">
-      <h1 class="marker">受講者の声</h1>
+      <h1>受講者の声</h1>
       <div class="some_voices_main">
         <div class="some_voices_col">
             <div class="voice_index_frame">
@@ -282,37 +282,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
         </div>
       </div>
-      <a href="voice.html">もっと体験談を読む 〉</a>
+      <a href="voice">もっと体験談を読む 〉</a>
     </div>
   </section>
   <!--hagakure ここから-->
   <!-- <div id="particles-js"></div> -->
-  <section class="hagakure-explain_hagakureexp wrapper_hp">
-    <div class="windy_contine_hagakureexp">
-      <div class="hagakure-containe_hagakureexp">
-        <div class="hagakure_samurai_1_hagakureexp">
-          <img src="{% static 'images/hagakure_samurai_1.png' %}" alt="考え中のサムライ">
-        </div>
-        <div class="hagakure-inner_hagakureexp">
-          <div class="hagakure_topicon_hagakureexp">
-            <img src="{% static 'images/hagakure_topicon.png' %}" alt="葉っぱ">
-          </div>
-          <div class="hagakure-summary_hagakureexp scroll_up">
-            <h1>hagakure</h1>
-            <p>
-              江戸時代に佐賀藩の藩士によって書かれた書物で、武士の精神や日頃の行いのあり方について説いています。今を生きるわたしたちにとっても「生きていくためのヒント」が詰まっており、佐賀で勉強する我々にも通じる部分があると考えコミュニティ名にしました。
-            </p>
-          </div>
-        </div>
-        <div class="hagakure_samurai_2_hagakureexp">
-          <img src="{% static 'images/hagakure_samurai_2.png' %}" alt="パソコン中のサムライ">
-        </div>
-      </div>
-    </div>
-  </section>
   <!--hagakure ここまで-->
  <!--  /* 雪を降らせるコンテナ-*/-->
-  </div>
+<!--  </div>-->
   <!-- New dojoここから-->
   <section class="wrapper_hp">
     <div class="dojo_container">
@@ -370,26 +347,28 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <section class="wrapper_hp">
       <div class="container_sns_makimono">
         <div class="item_left_makimono">
+          <img src="{% static 'images/samurai_thinking.png' %}"class="samurai_think_img"alt="考える侍">
           <img src="{% static 'images/footer_clouds.png' %}" class="cloud_makimono" alt="雲">
-          <img src="{% static 'images/footer_wood.png' %}" class="forest_makimono" alt="木">
+          <img src="{% static 'images/footer_wood2.png' %}" class="forest_makimono" alt="木">
         </div> <!-- /.item_right -->
+        <div class="scroll_up">
         <div class="background-image_makimono">
           <div class="makimono_image_makimono">
-            <img src="{% static 'images/makimono_topicon.png' %}" class="makimono-img_makimono" alt="巻物">
+            <img src="{% static 'images/makimono_topicon2.png' %}" class="makimono_img" alt="巻物">
           </div>
-          <div class="scroll_up">
-            <h1 class="sns_part_makimono">makimono</h1>
-            <div id="location">
-              <div class="sns_box_makimono">
+            <div class="sns_box_makimono">
+              <h1 class="sns_part_makimono">makimono</h1>
                 <h3 class="sub_title_sns"></h3>
-                <div class="fb-page facebook_wide_makimono"
-                  data-href="https://www.facebook.com/profile.php?id=100085682160764" data-show-posts="true"
-                  data-width="500" data-height="500" data-small-header="false" data-adapt-container-width="false"
-                  data-hide-cover="false" data-show-facepile="true">
-                  <blockquote cite="https://www.facebook.com/profile.php?id=100085682160764"
-                    class="fb-xfbml-parse-ignore"><a
-                      href="https://www.facebook.com/profile.php?id=100085682160764">Hagakure Programming塾</a>
-                  </blockquote>
+                <div class="fb-wrapper">
+                  <div class="fb-page facebook_wide_makimono"
+                    data-href="https://www.facebook.com/profile.php?id=100085682160764" data-show-posts="true"
+                    data-width="400" data-height="500" data-small-header="false" data-adapt-container-width="false"
+                    data-hide-cover="false" data-show-facepile="true">
+                    <blockquote cite="https://www.facebook.com/profile.php?id=100085682160764"
+                      class="fb-xfbml-parse-ignore"><a
+                        href="https://www.facebook.com/profile.php?id=100085682160764">Hagakure Programming塾</a>
+                    </blockquote>
+                  </div>
                 </div>
                 <div class="fb-page facebook_narrow_makimono"
                   data-href="https://www.facebook.com/profile.php?id=100085682160764" data-show-posts="true"
@@ -397,16 +376,25 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                   data-hide-cover="false" data-show-facepile="true">
                   <blockquote cite="https://www.facebook.com/profile.php?id=100085682160764"
                     class="fb-xfbml-parse-ignore"><a
-                      href="https://www.facebook.com/profile.php?id=100085682160764">Hagakure Programming塾</a>
+                    href="https://www.facebook.com/profile.php?id=100085682160764">Hagakure Programming塾</a>
                   </blockquote>
                 </div>
-              </div>
             </div>
           </div>
+          <div class="hagakure_wrapper">
+            <h3 class="marker">hagakure</h3>
+              <p>
+                江戸時代に佐賀藩の藩士によって書かれた書物で、<br>
+                武士の精神や日頃の行いのあり方について説いています。<br>
+                今を生きるわたしたちにとっても「生きていくためのヒント」が詰まっており、<br>
+                佐賀で学ぶ我々にも通じる部分があると考えコミュニティ名にしました。
+              </p>
+          </div>
         </div>
-        <div class="item_right_makimono">
-          <img src="{% static 'images/footer_castle.png' %}" class="castle_makimono" alt="お城">
-        </div><!-- /.item_left -->
+      <div class="item_right_makimono">
+        <img src="{% static 'images/samurai_inspi.png' %}"class="samurai_inspi_img"alt="思いつく侍">
+        <img src="{% static 'images/footer_castle2.png' %}" class="castle_makimono" alt="お城">
+      </div><!-- /.item_left -->
       </div><!-- /.container_sns -->
     </section>
     <!--SNS ここまで-->
