--- a/helloworld/hagakuredjango/hagakureapp/templates/index.html
+++ b/helloworld/hagakuredjango/hagakureapp/templates/index.html
@@ -400,6 +400,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!--SNS ここまで-->
   </div>
   <!--dojo_makimonoのグループここまで-->
+  <!-- 申込フォームボタン -->
+  <div class="form_button">
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSc9WH1hvDtyB_pghy8NNrrLCVeGONm7o8ET2PF70KPZTel_jQ/viewform">
+    <img src="{% static 'images/form_button.png' %}" alt="申込ボタン">
+    </a>
+  </div>
+  <!-- 申込フォームボタンここまで -->
   <footer>
     <div class="wrapper_hp footer">
       <div class="footer_border"></div>
