voiceのリンク切れを修正

--- a/helloworld/hagakuredjango/hagakureapp/templates/voice.html
+++ b/helloworld/hagakuredjango/hagakureapp/templates/voice.html
@@ -80,11 +80,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <a class="nav-link" aria-current="page" href="/">ホーム</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/">塾生の声</a>
+                    <a class="nav-link" href="{% url 'voice' %}">塾生の声</a>
                   </li>
                   <!-- Hagakure検定ページ追加 -->
                   <li class="nav-item">
-                    <a class="nav-link" href="saga_bot">佐賀弁bot</a>
+                    <a class="nav-link" href="{% url 'saga_bot' %}">佐賀弁bot</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="https://forms.gle/N8ipEt2RFSs8bt4a9">参加フォーム</a>
