トランスフォーマーサガ説明リンク修正

--- a/helloworld/hagakuredjango/hagakureapp/templates/saga_bot.html
+++ b/helloworld/hagakuredjango/hagakureapp/templates/saga_bot.html
@@ -204,7 +204,7 @@
       </form>
     </div>
     <div class="container">
-      <a href="indext5explain">モデルの説明</a>
+      <a href="{% url 'indext5explain' %}">モデルの説明</a>
     </div>
     
     <script>
