スマホ画面でHAGAKUREのタイトルをセンターに変更

--- a/helloworld/hagakuredjango/hagakureapp/templates/index.html
+++ b/helloworld/hagakuredjango/hagakureapp/templates/index.html
@@ -84,7 +84,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <a class="navbar-brand" href="/">
               <img src="{% static 'images/logo.png' %}" alt="hagakure_logo" width="30">
             </a>
-            <a class="voice-link" href="voice">塾生の声</a>
+<!--            <a class="voice-link" href="voice">塾生の声</a>-->
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
