--- a/helloworld/hagakuredjango/static/css/style.css
+++ b/helloworld/hagakuredjango/static/css/style.css
@@ -143,7 +143,7 @@ img {
     display: block;
     position: absolute;     /* spanを絶対位置指定に */
     right: 60px;               /* 右側に固定 */
-    top: 8px; 
+    top: 8px;
     text-decoration: none;  /* 下線を取り除く */
     color: inherit;         /* 親要素と同じ色にする、もしくは他の色を指定する */
 }
@@ -826,9 +826,7 @@ html { font-size:80%}
     .osusume_left h1{
         font-size: 30px;
     }
-    .osusume_text{
-        margin-left:0px;
-    }
+
 }
 @media (max-width: 830px){
     .osusume_event_photo{
@@ -860,7 +858,7 @@ html { font-size:80%}
         width: 90%;
     }
     .osusume_left h1{
-    letter-spacing: 0.1em;
+        letter-spacing: 0.1em;
     }
 }
 /* ------osusume ここまで----- */
@@ -1274,11 +1272,13 @@ html { font-size:80%}
     font-weight: normal;
     font-size: 38px;
     letter-spacing: 0.2em;
+    text-align: center;
 }
 .hagakure_wrapper p{
     font-size: 14px;
     letter-spacing: 0.2em;
     line-height:30px;
+    text-align: center;
 }
 
 @media(max-width:600px){
@@ -1403,17 +1403,14 @@ html { font-size:80%}
     .makimono_image_makimono{
       max-width: 375px;
     }
-    .hagakure_wrapper{
-      text-align: left;
-    }
     .hagakure_wrapper h3{
-      margin-left: 5%;
       max-width: 90%;
     }
       .hagakure_wrapper p{
       font-size: 1.2rem;
       margin: 0 auto;
       max-width: 90%;
+      text-align: left;
   }
 
 }
