--- a/helloworld/hagakuredjango/hagakureapp/templates/index.html
+++ b/helloworld/hagakuredjango/hagakureapp/templates/index.html
@@ -243,7 +243,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!--受講者の声 ここから-->
   <section class="some_voices_container wrapper_hp">
     <div class="some_voices scroll_up">
-      <h1>受講者</h1>
+      <h1>受講者の声</h1>
       <div class="some_voices_main">
         <div class="some_voices_col">
             <div class="voice_index_frame">
