--- a/helloworld/hagakuredjango/hagakureapp/templates/index.html
+++ b/helloworld/hagakuredjango/hagakureapp/templates/index.html
@@ -25,7 +25,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="{% static 'js/scroll_on.js' %}"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css" rel="stylesheet">
-
+    <script src="{% static 'js/scroll_on.js' %}"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js"
             type="text/javascript"></script>
@@ -33,6 +33,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <script async defer crossorigin="anonymous" src="https://connect.facebook.net/ja_JP/sdk.js#xfbml=1&version=v15.0"
     nonce="udzJmh8R"></script>
   <!--  OGP-->
+  <!-- トップ巻物 -->
+  <script src="{% static 'js/top_makimono.js' %}"></script>
 
   <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
     <meta property="og:url" content="https://hagakurepgm.net/">
@@ -113,6 +115,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </nav>
   </header>
 <section>
+
+  <!-- ここで最初の画面 -->
+  <div class="first-screen">
+    <img src="{% static 'images/top_makimono文字なし.png' %}" class="first-screen-icon-makimono" alt="Floating Image">
+    <img src="{% static 'images/logo.png' %}" class="first-screen-icon-logo" alt="Floating Image">
+    <h3>HAGAKUREプログラミング塾</h3>
+    <p>佐賀県内で世代・職業を超えて学び合うプログラミングコミュニティです。</p>
+    <p>一緒に、学びたい同志とともに楽しく成長しませんか。</p>
+  </div>
+    <!-- ここまで最初の画面 -->
+
     <main class="wrapper_hp main_visual">
       <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
