--- a/helloworld/hagakuredjango/static/css/style.css
+++ b/helloworld/hagakuredjango/static/css/style.css
@@ -1915,3 +1915,121 @@ html { font-size:80%}
   }
 }
 /* ----------雪を降らせるここまで----------- */
+/* ここで最初の画面 */
+.first-screen img.first-screen-icon-makimono {
+  position: absolute;
+  /* left: 19%;
+  top: 4%; */
+  margin-left: -90px;
+  margin-bottom: 30px;
+  width: 1200px;  /* 巻物を画面全体に広げる */
+  z-index: 1;  /* 巻物を最背面に */
+}
+.first-screen img.first-screen-icon-logo {
+  margin-top: 12px;
+  margin-left: 50px;
+  width: 80px;  /* ロゴのサイズを適切に調整 */
+  transform: translate(-50%, -50%);
+  z-index: 2;  /* ロゴを前面に */
+}
+.first-screen h3, .first-screen p {
+  width: 100%;
+  margin-top: -20px;
+  margin-left: -30px;
+  z-index: 2;  /* テキストを前面に */
+}
+.first-screen h3 {
+  font-family: "Wawati SC";
+  font-weight:bold;/*太字*/
+  font-size: 2.8rem;
+  margin-bottom: 20px;
+  z-index: 2;  /* ロゴを前面に */
+  letter-spacing: 0.04em;  /* 文字間を広くする */
+}
+.first-screen p {
+  font-family: "Noto Sans JP";
+  font-size: 1.5rem;
+  line-height: 0.4;  /* 行間を調整 */
+  margin-top: 0px;   /* 上マージン */
+  letter-spacing: -0.07em;  /* 文字間を狭くする */
+  z-index: 2;
+}
+@media (max-width: 1200px) {
+  .first-screen img.first-screen-icon-makimono {
+    width: 1000px; /* 画面サイズに合わせて巻物のサイズを調整 */
+    margin-left: -40px; /* 位置を調整 */
+  }
+  .first-screen img.first-screen-icon-logo {
+    width: 70px; /* ロゴのサイズを小さく調整 */
+    margin-left: 70px;
+  }
+  .first-screen h3 {
+    font-family: "Wawati SC";
+    letter-spacing: 0.04em;  /* 文字間を広くする */
+    font-size: 2.4rem; /* フォントサイズを小さく調整 */
+    margin-left: 30px;
+  }
+  .first-screen p {
+    font-size: 1.2rem; /* フォントサイズを小さく調整 */
+    margin-left: 30px;
+  }
+}
+@media (max-width: 440px) {
+  .first-screen img.first-screen-icon-makimono {
+    width: 410px;
+    height: 560px; /* 画像の高さを指定 */
+    margin-left: -30px; /* 位置を調整 */
+    margin-bottom: 5px; /* 位置を調整 */
+  }
+  .first-screen img.first-screen-icon-logo {
+    width: 45px; /* ロゴのサイズをさらに小さく */
+    margin-left: 45px;
+    margin-bottom: 10px;
+  }
+  .first-screen h3 {
+    font-family: "Wawati SC";
+    letter-spacing: 0.14em;  /* 文字間を広くする */
+    font-size: 2.1rem; /* フォントサイズを大きく */
+    margin-bottom: 10px;
+    margin-left: -0.5px;
+    line-height: 1.0; /* 行の高さを調整して改行しやすくする */
+    max-width: 58%; /* テキストの幅を制限して改行を促す */
+  }
+  .first-screen p {
+    font-size: 1.3rem; /* フォントサイズを大きく */
+    margin-left: -0.5px;
+    line-height: 1.5; /* 行の高さを調整して改行しやすくする */
+    max-width: 66%; /* テキストの幅を制限して改行を促す */
+  }
+}
+.first-screen {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  text-align: center;
+  z-index: 1001;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  animation: sliceScreen 1s ease-out forwards;
+}
+/* static/css/styles.css */
+@keyframes pageTurnAnimation {
+  0% {
+    transform: rotateY(0deg);
+    transform-origin: 0% 50%;
+    opacity: 1;
+  }
+  100% {
+    transform: rotateY(-180deg);
+    transform-origin: 0% 50%;
+    opacity: 0;
+  }
+}
+.first-screen.turn-page {
+  animation: pageTurnAnimation 2.0s forwards;
+}
+/* 最初の画面ここまで */
