巻物テキスト調整

--- a/helloworld/hagakuredjango/hagakureapp/templates/index.html
+++ b/helloworld/hagakuredjango/hagakureapp/templates/index.html
@@ -57,6 +57,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@300;400&display=swap" rel="stylesheet">
     <link rel="icon" href="{% static 'images/favicon.ico' %}">
+    <link href="https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic&display=swap" rel="stylesheet">
     <title>HAGAKUREプログラミング塾｜佐賀でプログラミングを学ぶ人達のコミュニティです。</title>
   </head>
 
@@ -120,7 +122,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <div class="first-screen">
     <img src="{% static 'images/top_makimono文字なし.png' %}" class="first-screen-icon-makimono" alt="Floating Image">
     <img src="{% static 'images/logo.png' %}" class="first-screen-icon-logo" alt="Floating Image">
-    <h3>HAGAKURE プログラミング塾</h3>
+    <h3>HAGAKURE<br>プログラミング塾</h3>
     <p>佐賀県内で世代・職業を超えて同志とともに楽しく成長しませんか。</p>
   </div>
     <!-- 巻物画面ここまで -->
