--- a/helloworld/hagakuredjango/static/css/style.css
+++ b/helloworld/hagakuredjango/static/css/style.css
@@ -1939,15 +1939,14 @@ html { font-size:80%}
   z-index: 2;  /* テキストを前面に */
 }
 .first-screen h3 {
-  font-family: "Wawati SC";
-  font-weight:bold;/*太字*/
+  font-family: "Hachi Maru Pop";
   font-size: 2.8rem;
   margin-bottom: 20px;
+  letter-spacing: 0.3em;  /* 文字間を広くする */
   z-index: 2;  /* ロゴを前面に */
-  letter-spacing: 0.04em;  /* 文字間を広くする */
 }
 .first-screen p {
-  font-family: "Noto Sans JP";
+  font-family: "Zen Maru Gothic";
   font-size: 1.5rem;
   line-height: 0.4;  /* 行間を調整 */
   margin-top: 0px;   /* 上マージン */
@@ -1964,8 +1963,6 @@ html { font-size:80%}
     margin-left: 70px;
   }
   .first-screen h3 {
-    font-family: "Wawati SC";
-    letter-spacing: 0.04em;  /* 文字間を広くする */
     font-size: 2.4rem; /* フォントサイズを小さく調整 */
     margin-left: 30px;
   }
@@ -1982,21 +1979,20 @@ html { font-size:80%}
     margin-bottom: 5px; /* 位置を調整 */
   }
   .first-screen img.first-screen-icon-logo {
-    width: 45px; /* ロゴのサイズをさらに小さく */
-    margin-left: 45px;
+    width: 60px; /* ロゴのサイズをさらに小さく */
+    margin-left: 60px;
     margin-bottom: 10px;
   }
   .first-screen h3 {
-    font-family: "Wawati SC";
-    letter-spacing: 0.14em;  /* 文字間を広くする */
-    font-size: 2.1rem; /* フォントサイズを大きく */
+    letter-spacing: 0.2em;  /* 文字間を広くする */
+    font-size: 1.5rem; /* フォントサイズを大きく */
     margin-bottom: 10px;
     margin-left: -0.5px;
     line-height: 1.0; /* 行の高さを調整して改行しやすくする */
     max-width: 58%; /* テキストの幅を制限して改行を促す */
   }
   .first-screen p {
-    font-size: 1.3rem; /* フォントサイズを大きく */
+    font-size: 1.0rem; /* フォントサイズを大きく */
     margin-left: -0.5px;
     line-height: 1.5; /* 行の高さを調整して改行しやすくする */
     max-width: 66%; /* テキストの幅を制限して改行を促す */
