活動御定書の仮置き

--- a/helloworld/hagakuredjango/hagakureapp/templates/index.html
+++ b/helloworld/hagakuredjango/hagakureapp/templates/index.html
@@ -357,6 +357,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </section>
     -->
     <!--dojo ここまで-->
+    <!--入塾までの流れ ここから-->
+    <section class="wrapper_hp nyujuku">
+      <div class="container_nyujuku">
+        <h2 class="nyujuku_ttl">入塾までの流れ</h2>
+        <div class="nyujuku_flow">
+
+        </div>
+      </div>
+    </section>
+    <!--入塾までの流れ ここまで-->
     <!--SNS ここから-->
     <section class="wrapper_hp">
       <div class="container_sns_makimono">
