--- a/helloworld/hagakuredjango/hagakureapp/templates/voice.html
+++ b/helloworld/hagakuredjango/hagakureapp/templates/voice.html
@@ -52,9 +52,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <link href="https://fonts.googleapis.com/earlyaccess/hannari.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@300;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
     <link rel="icon" href="static/images/favicon.ico">
     <title>HAGAKUREプログラミング塾｜参加者の声</title>
   </head>
@@ -193,7 +192,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 プログラミング歴: ～3年<br></p>
             </div>
           </div>
-          </div>
+        </div>
       </div>
       <div class="row voice-pink">
         <div class="row voice_box">
