--- a/helloworld/hagakuredjango/static/css/style.css
+++ b/helloworld/hagakuredjango/static/css/style.css
@@ -630,7 +630,7 @@ html { font-size:80%}
 }
 
 .all_aboutus div {
-  box-sizing: bordr-box;
+  box-sizing: border-box;
 }
 
 .all_aboutus {
@@ -2028,4 +2028,106 @@ html { font-size:80%}
 .first-screen.turn-page {
   animation: pageTurnAnimation 2.0s forwards;
 }
-/* 最初の画面ここまで */
+/*----- 入塾の流れ -----*/
+.nyujuku {
+    padding-top: 20px;
+    background-color: #fff;
+}
+.container_nyujuku {
+    margin: 0 auto;
+    width: clamp(300px, 80vw, 1000px);
+}
+.nyujuku_ttl {
+    margin-top: 20px;
+    text-align: center;
+}
+/*----- 入塾の流れ ここまで -----*/
+
+/*----------------------------------------------------
+ 利用規約ページ
+----------------------------------------------------*/
+/*----- 背景 -----*/
+.term {
+    background-image: url(../images/bg/top1.png);
+    background-size: 100%;
+    background-repeat: repeat-y;
+}
+/*----- 背景の余白 -----*/
+.term_use {
+    padding: 1em;
+}
+/*----- 白枠内部の設定 -----*/
+.term_use_container {
+    margin: 2em auto;
+    padding: 1em 20px 1.6em;
+    width: clamp(300px, 75vw, 1000px);
+    background-color: rgba(255,255,255, 0.85);
+    border-radius: 20px;
+    font-family: "M PLUS 1p", 'メイリオ', 'ヒラギノ角ゴシック', 'MSゴシック',sans-serif;
+}
+/*----- メインタイトル -----*/
+.term_main_ttl {
+    margin-top: 1em;
+    padding-bottom: 1em;
+    /*padding: .5em;*/
+    font-size: clamp(17px, 3.2vw, 36px);
+    font-weight: 600;
+    color: #4C4C4C;
+    letter-spacing: 0.3em;
+    text-align: center;
+}
+/*----- 最初のコンテンツ以外の設定 -----*/
+.term_contents:not(:first-of-type) {
+    margin-top: 2em;
+}
+/*----- コンテンツ内部の設定 -----*/
+.term_contents > * {
+    color: #625651;
+    line-height: 1.6;
+}
+/*----- コンテンツのタイトル -----*/
+.term_contents_ttl {
+    border: solid 2px #625651;
+    padding: 3px 8px;
+    font-size: clamp(16px, 1.6vw, 18px);
+    font-weight: 600;
+    position: relative;
+}
+.term_contents_ttl::after {
+    position: absolute;
+    content: "";
+    inset: 3px -5px -5px 3px;
+    background: rgba(241,199,202,0.3);
+}
+
+.term_contents_ttl + * {
+    margin-top: 1.2em;
+}
+
+.term_contents > p,
+.term_contents > ul > li {
+    /* margin: 0; */
+    margin-bottom: 0;
+    font-size: clamp(14px, 1.5vw, 16px);
+}
+.term_contents > ul > li::marker {
+    content: "・"
+}
+.term_contents > ul {
+    padding-left: 1rem;
+}
+/*----- 画面サイズが600px以上のとき -----*/
+@media screen and (min-width:600px) {
+    /*----- 白枠内部の余白を変更 -----*/
+    .term_use_container {
+        margin: 5vh auto;
+        padding: 1em 60px 2.8em;
+    }
+
+    .term_main_ttl {
+        padding: 1em;
+    }
+    .term_contents_ttl {
+        display: inline-block;
+    }
+}
