「入塾までの流れ」を追加

--- a/helloworld/hagakuredjango/hagakureapp/templates/index.html
+++ b/helloworld/hagakuredjango/hagakureapp/templates/index.html
@@ -304,6 +304,48 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!--hagakure ここまで-->
  <!--  /* 雪を降らせるコンテナ-*/-->
 <!--  </div>-->
+    <!--入塾までの流れ ここから-->
+    <section class="wrapper_hp nyujuku">
+      <div class="container_nyujuku scroll_up">
+        <h2 class="nyujuku_ttl">入塾までの流れ</h2>
+        <dl class="nyujuku_flow">
+          <div class="flow_contents">
+            <div class="contents_num">1</div>
+            <dt>申し込み</dt>
+            <dd>申込フォームから必要事項を記入して申し込みます。</dd>
+            <div class="contents_img">
+              <img src="{% static 'images/Google_Forms_logo_(2014-2020) 1.png' %}" alt="">
+            </div>
+          </div>
+          <div class="flow_contents">
+            <div class="contents_num">2</div>
+            <dt>メール</dt>
+            <dd>申し込み後、１〜２日 以内に運営から招待メールが届きます。</dd>
+            <div class="contents_img">
+              <img src="{% static 'images/mail.png' %}" alt="">
+            </div>
+          </div>
+          <div class="flow_contents">
+            <div class="contents_num">3</div>
+            <dt>参加</dt>
+            <dd>SlackおよびGitHubに招待しますので、参加します。</dd>
+            <div class="contents_img">
+              <img src="{% static 'images/Slack_icon_2019 1.png' %}" alt="">
+              <img src="{% static 'images/Octicons-mark-github 1.png' %}" alt="">
+            </div>
+          </div>
+          <div class="flow_contents">
+            <div class="contents_num">4</div>
+            <dt>学ぶ</dt>
+            <dd>参加完了です。 同志とともに楽しく学びましょう。</dd>
+            <div class="contents_img">
+              <img src="{% static 'images/samurai_inspi 1.png' %}" alt="">
+            </div>
+          </div>
+        </dl>
+      </div>
+    </section>
+  <!--入塾までの流れ ここまで-->
   <!-- New dojoここから-->
   <section class="wrapper_hp">
     <div class="dojo_container">
