--- a/helloworld/hagakuredjango/static/css/style.css
+++ b/helloworld/hagakuredjango/static/css/style.css
@@ -2028,4 +2028,78 @@ html { font-size:80%}
 .first-screen.turn-page {
   animation: pageTurnAnimation 2.0s forwards;
 }
+
+/*----- 入塾の流れ -----*/
+.nyujuku {
+    padding-top: 20px;
+    background-color: #fff;
+}
+.container_nyujuku {
+    margin: 0 auto;
+    width: clamp(300px, 80vw, 1000px);
+}
+.nyujuku_ttl {
+    margin-top: 20px;
+    text-align: center;
+}
+.nyujuku_flow {
+    margin-top: 20px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 250px);
+    gap: 30px calc(0.625rem + ((1vw - 3px) * 4));
+}
+.flow_contents {
+    background: #F4ECE9;
+    border: solid 2px #625651;
+    border-radius: 15px;
+    position: relative;
+}
+.contents_num{
+    position: absolute;
+    top: -15px;
+    left: -15px;
+    width: 35px;
+    height: 35px;
+    background: #625651;
+    border-radius: 30px;
+    color: #FFF;
+    font-size: 1.4rem;
+    display: grid;
+    place-items: center;
+}
+.flow_contents > dt {
+    margin-top: 20px;
+    font-family: "Mochiy Pop One", sans-serif;
+    font-size: calc(1.2rem + ((1vw - 3px) * 1.6));
+    text-align: center;
+}
+.flow_contents > dd {
+    padding: 10px;
+    /*font-size: calc(1rem + ((1vw - 3px) * 1.8));*/
+    font-size: 1.2rem;
+}
+.contents_img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.contents_img > img {
+    max-width: 80px;
+    height: auto;
+    object-fit: cover;
+}
+@media (width > 800px){
+    .nyujuku_ttl {
+        font-size: 30px;
+    }
+    .nyujuku_flow {
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: 1fr;
+    }
+    .flow_contents > dt {
+        font-size: 22px;
+    }
+}
+/*----- 入塾の流れ ここまで -----*/
 /* 最初の画面ここまで */
